syntax = "proto3";
package com.vang.grpc;
option java_multiple_files = true;
option java_package = "com.vang.categoryservice.query.grpc.gen";
option java_outer_classname = "CategoryServer";

service GetCategoryById {
  rpc getData(FindCategoryByIdRequest) returns (FindCategoryByIdReply);
}

message FindCategoryByIdRequest {
  string categoryid = 1;
}

message FindCategoryByIdReply {
  string categoryJson = 1;
}